@@ -1,5 +1,9 @@
 It does not matter how slowly you go as long as you do not stop. -- Confucius
 
+Sun, Feb 8, 2008
+---------------------------------------------------------------------
+- Added custom logger to highlight logged messages.
+
 Sat, Feb 7, 2008
 ---------------------------------------------------------------------
 - Created initial implementation of adding a new task (all except specific date).
